[package]
name = "sfv"
version = "0.9.1"
authors = ["Tania Batieva <yalyna.ts@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sfv"
description = """Structured Field Values for HTTP parser.
Implementation of RFC 8941."""
repository = "https://github.com/undef1nd/sfv"
keywords = ["http-header", "structured-header", ]
exclude = ["tests/**", ".github/*"]


[dependencies]
indexmap="1.8.0"
rust_decimal= { version = "1.20.0", features = ["std"] }
data-encoding = "2.3.2"

[dev-dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
