[package]
name = "sfv"
version = "0.9.3"
authors = ["Tania Batieva <yalyna.ts@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sfv"
description = """Structured Field Values for HTTP parser.
Implementation of RFC 8941."""
repository = "https://github.com/undef1nd/sfv"
keywords = ["http-header", "structured-header", ]
exclude = ["tests/**", ".github/*"]


[dependencies]
indexmap = "2"
rust_decimal = { version = "1.20.0", default-features = false }
data-encoding = "2.3.2"

[dev-dependencies]
rust_decimal = { version = "1.20.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
